# plum-ai-health-app

./: .gitignore  ARCHITECTURE.md  COMPONENT_CONTRACTS.md  EVAL_REPORT.md  README.md
ai-agent-python/: .env.example  .gitignore  langgraph.json  pyproject.toml
ai-agent-python/scripts/: generate_eval_report.py  generate_sample_documents.py  run_ocr_test_cases.py  run_test_cases.py
ai-agent-python/src/: adjudication_api.py  agents.py  engine.py  member_messages.py  schemas.py  submission.py
ai-agent-python/src/extractors/: structured_parser.py
ai-agent-python/src/graph/: async_helpers.py  public_builder.py  routing.py  state.py
ai-agent-python/src/graph/nodes/: decision.py  extraction.py  format_response.py  gatekeeper.py  ingest.py  ocr.py  policy.py  submission_validator.py
ai-agent-python/src/llm/: client.py  patient.py
ai-agent-python/src/ocr/: document_ocr.py  preprocess.py  prompts.py
ai-agent-python/src/policy/: exclusion_intent.py  intent_match.py  line_items.py  pre_auth_intent.py  rules_config.py  waiting_intent.py
ai-agent-python/src/validators/: document_type.py  document_validator.py  submission_validator.py
ai-agent-python/tests/: test_exclusion_intent.py  test_extraction_dental.py  test_extraction_routing.py  test_gatekeeper.py  test_member_messages.py  test_ocr.py  test_policy.py  test_policy_edge_cases.py  test_submission_validator.py
backend-nestjs/: .env.example  package-lock.json  package.json
backend-nestjs/src/: main.ts  (+2 more)
frontend-nextjs/: .env.example  package-lock.json  package.json
sample-documents/: ocr_test_cases.json
(+37 files in other folders)
